# bizu-webhook

./: Procfile  db.sqlite3  pyproject.toml
bizu/: apps.py  models.py  urls.py  views.py
bizu/migrations/: 0001_initial.py
bizu/templates/: index.html
webhook_test/: asgi.py  settings.py  urls.py  wsgi.py
