[tool.poetry]
name = "webhook_test"
version = "0.1.0"
description = ""
authors = ["Mateus Valgueiro <mvt@cesar.org.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-admin = "^2.0.1"
django-rest-hooks = "^1.5.0"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
